--- a/html_excercise/index.html
+++ b/html_excercise/index.html
@@ -14,7 +14,7 @@
     <h3>22 100 46</h3>
     <p>in negative integer form</p>
     <h3>-2, -6</h3>
-    <p>as long it ends with 2,4,6,8,0</p>
+    <p>as long it ends with 2 ,4 ,6 ,8 ,0</p>
     <h2>see also</h2>
     <p>HAHAHAHATDOG</p>
    </body>
