--- a/html_excercise/index.html
+++ b/html_excercise/index.html
@@ -7,15 +7,24 @@
     </title>
    </head>
    <body>
-    <h1>Elements</h1>
-    <h2>Summary</h2>
-    <p>Even Numbers</p>
-    <h2>2 4 6</h2>
-    <h3>22 100 46</h3>
-    <p>in negative integer form</p>
-    <h3>-2, -6</h3>
-    <p>as long it ends with 2 ,4 ,6 ,8 ,0</p>
-    <h2>see also</h2>
-    <p>HAHAHAHATDOG</p>
+    <ol>
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Banana</li>
+    </ol>
+
+    <ul>
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Banana</li>
+    </ul>
+
+    <dd>
+        <dt>Fruits</dt>
+        <dd>Are sweet</dd>
+
+        <dt>Vegetables</dt>
+        <dd>Aren't</dd>
+    </dd>
    </body>
 </html>
