Commiting List final

--- a/html_excercise/index.html
+++ b/html_excercise/index.html
@@ -21,9 +21,9 @@
 
     <dd>
         <dt>Fruits</dt>
-        <dd>Are sweet</dd>
+        <dd>Are sweet.</dd>
 
-        <dt>Vegetables</dt>
+        <dt>Vegetables.</dt>
         <dd>Aren't</dd>
     </dd>
    </body>
