--- a/html_excercise/index.html
+++ b/html_excercise/index.html
@@ -7,24 +7,28 @@
     </title>
    </head>
    <body>
-    <ol>
-        <li>Apple</li>
-        <li>Orange</li>
-        <li>Banana</li>
-    </ol>
+    <table>
+        <tr>
+            <th>Europe</th>
+            <th>Asia</th>
+            <th>Africa</th>
+        </tr>
+        <tr>
+            <td>Ukraine</td>
+            <td>China</td>
+            <td>Egypt</td>
+        </tr>
+        <tr>
+            <td>Poland</td>
+            <td>India</td>
+            <td>Kenya</td>
 
-    <ul>
-        <li>Apple</li>
-        <li>Orange</li>
-        <li>Banana</li>
-    </ul>
-
-    <dd>
-        <dt>Fruits</dt>
-        <dd>Are sweet.</dd>
-
-        <dt>Vegetables.</dt>
-        <dd>Aren't</dd>
-    </dd>
+        </tr>
+        <tr>
+            <td>Italy</td>
+            <td>Thailand</td>
+            <td>Sudan</td>
+        </tr>
+    </table>
    </body>
 </html>
