--- a/html_excercise/index.html
+++ b/html_excercise/index.html
@@ -7,28 +7,50 @@
     </title>
    </head>
    <body>
-    <table>
-        <tr>
-            <th>Europe</th>
-            <th>Asia</th>
-            <th>Africa</th>
-        </tr>
-        <tr>
-            <td>Ukraine</td>
-            <td>China</td>
-            <td>Egypt</td>
-        </tr>
-        <tr>
-            <td>Poland</td>
-            <td>India</td>
-            <td>Kenya</td>
+    <div>
+    <div>
+       <header>Main Article
+          <nav>
+              <ol>
+                <li>first</li>
+                <li>second</li>
+                <li>last</li>
+              </ol>
+          </nav>
+       </header>
+    </div>
+    <div>
+        <main>
+            <div>
+            <article>
+                <section>
+                    <h1>first</h1>
+                    <p>the first text is here</p>
+                </section>
 
-        </tr>
-        <tr>
-            <td>Italy</td>
-            <td>Thailand</td>
-            <td>Sudan</td>
-        </tr>
-    </table>
+                <section>
+                    <h1>second</h1>
+                    <p>the second text is here</p>
+                </section>
+
+            </article>
+            </div>
+            <div>
+            <aside>
+                <ol>
+                    <li>first</li>
+                    <li>second</li>
+                    <li>last</li>
+                </ol>
+            </aside>
+            </div>
+        </main>
+    </div>
+    <div>
+        <footer>
+            <p>Author's details</p>
+        </footer>
+    </div>
+    </div>
    </body>
 </html>
