Commiting Link Final

--- a/html_excercise/index.html
+++ b/html_excercise/index.html
@@ -7,28 +7,8 @@
     </title>
    </head>
    <body>
-    <table>
-        <tr>
-            <th>Europe</th>
-            <th>Asia</th>
-            <th>Africa</th>
-        </tr>
-        <tr>
-            <td>Ukraine</td>
-            <td>China</td>
-            <td>Egypt</td>
-        </tr>
-        <tr>
-            <td>Poland</td>
-            <td>India</td>
-            <td>Kenya</td>
-        </tr>
-        <tr>
-            <td>Italy</td>
-            <td>Thailand</td>
-            <td>Sudan</td>
-        </tr>
-    </table>
-
+    <a href="https://www.youtube.com/watch?v=LLr0lOF685M&pp=ygUeaSBsb3ZlIHlvdSBqZXN1cyB0cmlzaGEgcGF5dGFz" target="_blank">
+        <img scr="C:\Users\Mary Ann Orzales\Downloads\Youtube.png" alt="Youtube">
+    </a>
    </body>
 </html>
