Commiting Forms Final

--- a/html_excercise/index.html
+++ b/html_excercise/index.html
@@ -7,8 +7,11 @@
     </title>
    </head>
    <body>
-    <a href="https://www.youtube.com/watch?v=LLr0lOF685M&pp=ygUeaSBsb3ZlIHlvdSBqZXN1cyB0cmlzaGEgcGF5dGFz" target="_blank">
-        <img scr="C:\Users\Mary Ann Orzales\Downloads\Youtube.png" alt="Youtube">
-    </a>
+    <form action="" method="get">
+
+    <input type="email" name="name"  required/>
+    <input type="password" name="password"required>
+    <input type="submit" value="Log-in">
+    </form>
    </body>
 </html>
